--- a/dart-sass/sass/styles.css
+++ b/dart-sass/sass/styles.css
@@ -1,38 +1,34 @@
-@font-face {
-  font-family: "Shrikhand";
-  src: url(police/Shrikhand/Shrikhand-Regular.ttf);
-  font-weight: normal;
-  font-style: normal;
+@import url(libs/fonts.scss);
+body {
+  width: 100%;
+  font-family: "roboto";
 }
 
-@font-face {
-  font-family: "Roboto";
-  src: url(police/Roboto/Roboto-Regular.ttf);
+header {
+  display: block;
 }
 
-@media screen and (max-width: 768px) {
-  body {
-    width: 100%;
-    font-family: "roboto";
-  }
-  body .logo {
-    font-family: "Shrikhand";
-    text-align: center;
-    width: 50%;
-  }
-  body h2 p {
-    text-align: center;
-    width: 95%;
-    font-size: 17px;
-  }
-}
-
-.button {
-  padding: 20px;
-  font-size: 20px;
+header .logo {
   text-align: center;
-  border-radius: 0px 20px 20px 0px;
-  background-color: #d9d9d9;
-  cursor: pointer;
+  padding: 30px;
+}
+
+header img {
+  height: 30px;
+}
+
+.header-menu {
+  position: relative;
+  margin: 10px;
+}
+
+.header-menu .arrow {
+  position: absolute;
+  top: 40%;
+}
+
+.header-menu .arrow .fa-arrow-left {
+  display: inline-block;
+  font-size: normal;
 }
 /*# sourceMappingURL=styles.css.map */
