--- a/dart-sass/sass/styles.scss
+++ b/dart-sass/sass/styles.scss
@@ -1,38 +1,33 @@
-@font-face {
-  font-family: "Shrikhand";
-  src: url(police/Shrikhand/Shrikhand-Regular.ttf);
-  font-weight: normal;
-  font-style: normal;
+@import url(libs/fonts.scss);
+
+$color-primary: #9356dc;
+$color-secondary: #ff79da;
+$color-tertiary: #99e2d0;
+
+body {
+  width: 100%;
+  font-family: "roboto";
 }
 
-@font-face {
-  font-family: "Roboto";
-  src: url(police/Roboto/Roboto-Regular.ttf);
-}
-
-@media screen and (max-width: 768px) {
-  body {
-    width: 100%;
-    font-family: "roboto";
-
-    .logo {
-      font-family: "Shrikhand";
-      text-align: center;
-      width: 50%;
-    }
-    h2 p {
-      text-align: center;
-      width: 95%;
-      font-size: 17px;
-    }
+header {
+  display: block;
+  .logo {
+    text-align: center;
+    padding: 30px;
+  }
+  img {
+    height: 30px;
   }
 }
-
-.button {
-  padding: 20px;
-  font-size: 20px;
-  text-align: center;
-  border-radius: 0px 20px 20px 0px;
-  background-color: #d9d9d9;
-  cursor: pointer;
+.header-menu {
+  position: relative;
+  margin: 10px;
+  .arrow {
+    position: absolute;
+    top: 40%;
+    .fa-arrow-left {
+      display: inline-block;
+      font-size: normal;
+    }
+  }
 }
