--- a/dart-sass/sass/styles.css
+++ b/dart-sass/sass/styles.css
@@ -1,7 +1,14 @@
-@import url(libs/fonts.scss);
+@import url(utils/fonts.scss);
+@import url(utils/variables.scss);
+@import url(utils/mixins.scss);
 body {
-  width: 100%;
-  font-family: "roboto";
+  font-family: "roboto", sans-serif;
+  margin: auto;
+}
+
+body a {
+  text-decoration: none;
+  color: black;
 }
 
 header {
@@ -10,10 +17,11 @@ header {
 
 header .logo {
   text-align: center;
-  padding: 30px;
+  padding: 10px;
 }
 
 header img {
+  width: 50%;
   height: 30px;
 }
 
@@ -30,5 +38,157 @@ header img {
 .header-menu .arrow .fa-arrow-left {
   display: inline-block;
   font-size: normal;
+}
+
+main {
+  display: block;
+}
+
+main .localisation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #e6e6e6;
+  -webkit-box-shadow: inset 0px 7px 3px -5px #3a383833;
+          box-shadow: inset 0px 7px 3px -5px #3a383833;
+}
+
+main .localisation i {
+  display: inline-block;
+  color: black;
+  font-size: 17px;
+}
+
+main .localisation input {
+  text-align: center;
+  border: transparent;
+  background-color: #e6e6e6;
+  font-weight: bolder;
+  font-size: 17px;
+}
+
+.recherche_restaurant {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #f5f5f5;
+  padding: 20px 0 30px 0;
+}
+
+.recherche_restaurant h1 {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  margin: 5px;
+}
+
+.recherche_restaurant p {
+  font-size: 20px;
+  font-weight: lighter;
+  text-align: center;
+  margin: 30px 10px 50px 10px;
+}
+
+.recherche_restaurant .btn {
+  font-size: 20px;
+  font-weight: 500;
+  padding: 15px;
+  border: 1px solid transparent;
+  border-radius: 50px;
+  -webkit-box-shadow: 0 0 10px #3a383833;
+          box-shadow: 0 0 10px #3a383833;
+  color: white;
+  background: -webkit-gradient(linear, right bottom, left top, from(#9356dc), to(#ff79da));
+  background: linear-gradient(to left top, #9356dc, #ff79da);
+}
+
+.fonctionnement {
+  margin-top: 60px;
+}
+
+.fonctionnement h2 {
+  text-align: left;
+  margin-left: 30px;
+  padding-bottom: 20px;
+}
+
+.btn-fonctionnement {
+  margin: 10px 0px 10px 0px;
+}
+
+.btn-fonctionnement .fonctionnement_button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 20px 5px 30px 5px;
+}
+
+.btn-fonctionnement .fonctionnement_button_number {
+  position: relative;
+  left: 12px;
+  z-index: 2;
+  padding: 5px 10px;
+  border-radius: 100px;
+  border: 1px solid #9356dc;
+  background-color: #9356dc;
+  color: white;
+  font-size: 15px;
+}
+
+.btn-fonctionnement .fonctionnement_button a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 85%;
+  border: 1px solid transparent;
+  -webkit-box-shadow: 0 5px 10px #3a383833;
+          box-shadow: 0 5px 10px #3a383833;
+  border-radius: 20px;
+  padding: 5px;
+  background-color: #f5f5f5;
+  position: relative;
+  z-index: 1;
+}
+
+.btn-fonctionnement .fonctionnement_button a .fonctionnement_button_icon {
+  font-size: 24px;
+  margin-left: 20px;
+}
+
+.btn-fonctionnement .fonctionnement_button a h3 {
+  font-size: 20px;
+}
+
+.image_restaurant img {
+  width: 100%;
+  height: 350px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 /*# sourceMappingURL=styles.css.map */
