--- a/dart-sass/sass/styles.css
+++ b/dart-sass/sass/styles.css
@@ -1,6 +1,43 @@
 @import url(utils/fonts.scss);
 @import url(utils/variables.scss);
 @import url(utils/mixins.scss);
+@media screen and (min-width: 992px) {
+  body {
+    width: 80%;
+  }
+  .fonctionnement {
+    width: 40%;
+  }
+  .recherche_restaurant {
+    width: 40%;
+  }
+  .box_intro {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    background-color: #f5f5f5;
+  }
+  .box_restaurant {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .card_restaurant {
+    width: 50%;
+  }
+}
+
 body {
   font-family: "roboto", sans-serif;
   margin: auto;
@@ -22,7 +59,7 @@ header .logo {
 
 header img {
   width: 50%;
-  height: 30px;
+  height: 7vw;
 }
 
 .header-menu {
@@ -63,8 +100,8 @@ main .localisation {
 
 main .localisation i {
   display: inline-block;
-  color: black;
   font-size: 17px;
+  margin-right: 5px;
 }
 
 main .localisation input {
@@ -86,8 +123,8 @@ main .localisation input {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #f5f5f5;
   padding: 20px 0 30px 0;
+  background-color: #f5f5f5;
 }
 
 .recherche_restaurant h1 {
@@ -190,5 +227,60 @@ main .localisation input {
   height: 350px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.card_restaurant {
+  border-radius: 20px;
+  border: 1px solid transparent;
+  -webkit-box-shadow: 0 5px 10px #3a383833;
+          box-shadow: 0 5px 10px #3a383833;
+  width: 85%;
+  height: 60vw;
+  margin: 20px;
+}
+
+.card_restaurant img {
+  width: 100%;
+  height: 40vw;
+  border-radius: 20px 20px 0 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.card_restaurant .nouveau {
+  position: relative;
+  top: -150px;
+  left: 220px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  width: 70px;
+  background-color: #99e2d0;
+  color: #32b091;
+  font-weight: bold;
+}
+
+.card_restaurant .description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: -70px 10px 0 10px;
+}
+
+.card_restaurant .description_icone {
+  margin-top: 40px;
+  font-size: 20px;
+}
+
+.card_restaurant .description_icone:hover {
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356dc), to(#ff79da));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 /*# sourceMappingURL=styles.css.map */
