--- a/dart-sass/sass/styles.css
+++ b/dart-sass/sass/styles.css
@@ -1,6 +1,75 @@
-@import url(utils/fonts.scss);
-@import url(utils/variables.scss);
-@import url(utils/mixins.scss);
+@font-face {
+  font-family: "Shrikhand";
+  src: url(police/Shrikhand/Shrikhand-Regular.ttf);
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url(police/Roboto/Roboto-Regular.ttf);
+}
+
+@-webkit-keyframes heart {
+  0% {
+    opacity: 0;
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+  }
+  17% {
+    -webkit-transform-origin: bottom;
+            transform-origin: bottom;
+    -webkit-transform: scalex(0.4);
+            transform: scalex(0.4);
+    opacity: 0.5;
+  }
+  24% {
+    opacity: 1;
+    -webkit-transform: scalex(0.6);
+            transform: scalex(0.6);
+  }
+  46% {
+    -webkit-transform: scalex(0.8);
+            transform: scalex(0.8);
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+}
+
+@keyframes heart {
+  0% {
+    opacity: 0;
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+  }
+  17% {
+    -webkit-transform-origin: bottom;
+            transform-origin: bottom;
+    -webkit-transform: scalex(0.4);
+            transform: scalex(0.4);
+    opacity: 0.5;
+  }
+  24% {
+    opacity: 1;
+    -webkit-transform: scalex(0.6);
+            transform: scalex(0.6);
+  }
+  46% {
+    -webkit-transform: scalex(0.8);
+            transform: scalex(0.8);
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+}
+
 @media screen and (min-width: 992px) {
   body {
     width: 80%;
@@ -21,20 +90,19 @@
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    background-color: #f5f5f5;
+    background-color: #fff;
   }
-  .box_restaurant {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+  .restaurants .box_restaurant .card_restaurant {
+    width: 40%;
+    height: 20vw;
+    margin: 10px;
   }
-  .card_restaurant {
-    width: 50%;
+  .restaurants .box_restaurant .card_restaurant img {
+    height: 190px;
+  }
+  .restaurants .box_restaurant .card_restaurant .nouveau {
+    top: -280px;
+    left: 280px;
   }
 }
 
@@ -155,7 +223,7 @@ main .localisation input {
 }
 
 .fonctionnement {
-  margin-top: 60px;
+  margin: 60px 0 60px 0;
 }
 
 .fonctionnement h2 {
@@ -225,8 +293,31 @@ main .localisation input {
 .image_restaurant img {
   width: 100%;
   height: 350px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+
+.restaurants {
+  background-color: #f5f5f5;
+  margin: 20px 0 20px 0;
+  padding: 10px 0 10px 0;
+}
+
+.restaurants h2 {
+  margin-left: 30px;
+}
+
+.restaurants .box_restaurant {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .card_restaurant {
@@ -239,24 +330,17 @@ main .localisation input {
   margin: 20px;
 }
 
+.card_restaurant:hover {
+  -webkit-box-shadow: 0 10px 15px #9356dc;
+          box-shadow: 0 10px 15px #9356dc;
+}
+
 .card_restaurant img {
   width: 100%;
   height: 40vw;
   border-radius: 20px 20px 0 0;
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.card_restaurant .nouveau {
-  position: relative;
-  top: -150px;
-  left: 220px;
-  padding: 5px 10px;
-  border-radius: 5px;
-  width: 70px;
-  background-color: #99e2d0;
-  color: #32b091;
-  font-weight: bold;
 }
 
 .card_restaurant .description {
@@ -270,17 +354,40 @@ main .localisation input {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: -70px 10px 0 10px;
+  margin: -15px 5px 5px 5px;
+}
+
+.card_restaurant .description_titre {
+  font-size: 17px;
 }
 
 .card_restaurant .description_icone {
-  margin-top: 40px;
-  font-size: 20px;
+  font-size: 24px;
+  margin-top: 30px;
+}
+
+.card_restaurant .description_icone--empty {
+  color: transparent;
 }
 
 .card_restaurant .description_icone:hover {
   background: -webkit-gradient(linear, left top, left bottom, from(#9356dc), to(#ff79da));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  -webkit-animation: heart 2000ms ease-in-out;
+          animation: heart 2000ms ease-in-out;
+}
+
+.card_restaurant .nouveau {
+  position: relative;
+  left: 220px;
+  top: -250px;
+  padding: 5px;
+  border-radius: 5px;
+  width: 70px;
+  height: 20px;
+  background-color: #99e2d0;
+  color: #32b091;
+  font-weight: bold;
 }
 /*# sourceMappingURL=styles.css.map */
