--- a/dart-sass/sass/styles.scss
+++ b/dart-sass/sass/styles.scss
@@ -1,15 +1,7 @@
-@import url(utils/fonts.scss);
-@import url(utils/variables.scss);
-@import url(utils/mixins.scss);
-
-$color-primary: #9356dc;
-$color-secondary: #ff79da;
-$color-tertiary: #99e2d0;
-$color-bg: #f5f5f5;
-
-@mixin shadow {
-  box-shadow: 0 5px 10px #3a383833;
-}
+@import "./utils/fonts";
+@import "./utils/variables";
+@import "./utils/mixins";
+@import "./utils/keyframes";
 
 @media screen and(min-width: 992px) {
   body {
@@ -25,15 +17,23 @@ $color-bg: #f5f5f5;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: $color-bg;
+    background-color: #fff;
   }
-  .box_restaurant {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
-  .card_restaurant {
-    width: 50%;
+  .restaurants {
+    .box_restaurant {
+      .card_restaurant {
+        width: 40%;
+        height: 20vw;
+        margin: 10px;
+        img {
+          height: 190px;
+        }
+        .nouveau {
+          top: -280px;
+          left: 280px;
+        }
+      }
+    }
   }
 }
 
@@ -125,7 +125,7 @@ main {
 }
 
 .fonctionnement {
-  margin-top: 60px;
+  margin: 60px 0 60px 0;
   h2 {
     text-align: left;
     margin-left: 30px;
@@ -177,7 +177,22 @@ main {
   img {
     width: 100%;
     height: 350px;
-    object-fit: cover;
+    object-fit: fill;
+  }
+}
+
+.restaurants {
+  background-color: $color-bg;
+  margin: 20px 0 20px 0;
+  padding: 10px 0 10px 0;
+  h2 {
+    margin-left: 30px;
+  }
+  .box_restaurant {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
   }
 }
 
@@ -188,33 +203,29 @@ main {
   width: 85%;
   height: 60vw;
   margin: 20px;
+  &:hover {
+    @include shadow-darker;
+  }
   img {
     width: 100%;
     height: 40vw;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
   }
-  .nouveau {
-    position: relative;
-    top: -150px;
-    left: 220px;
-    padding: 5px 10px;
-    border-radius: 5px;
-    width: 70px;
-    background-color: $color-tertiary;
-    color: darken($color: $color-tertiary, $amount: 30);
-    font-weight: bold;
-  }
   .description {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: -70px 10px 0 10px;
+    margin: -15px 5px 5px 5px;
     &_titre {
+      font-size: 17px;
     }
     &_icone {
-      margin-top: 40px;
-      font-size: 20px;
+      font-size: 24px;
+      margin-top: 30px;
+      &--empty {
+        color: transparent;
+      }
       &:hover {
         background: -webkit-gradient(
           linear,
@@ -225,7 +236,20 @@ main {
         );
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
+        animation: heart 2000ms ease-in-out;
       }
     }
+  }
+  .nouveau {
+    position: relative;
+    left: 220px;
+    top: -250px;
+    padding: 5px;
+    border-radius: 5px;
+    width: 70px;
+    height: 20px;
+    background-color: $color-tertiary;
+    color: darken($color: $color-tertiary, $amount: 30);
+    font-weight: bold;
   }
 }
