--- a/dart-sass/sass/styles.css
+++ b/dart-sass/sass/styles.css
@@ -12,61 +12,81 @@
 
 @-webkit-keyframes heart {
   0% {
-    opacity: 0;
-    -webkit-transform: scaleX(0);
-            transform: scaleX(0);
+    -webkit-transform: scaley(0);
+            transform: scaley(0);
   }
   17% {
-    -webkit-transform-origin: bottom;
-            transform-origin: bottom;
-    -webkit-transform: scalex(0.4);
-            transform: scalex(0.4);
-    opacity: 0.5;
+    -webkit-transform: scaley(0.4);
+            transform: scaley(0.4);
   }
   24% {
-    opacity: 1;
-    -webkit-transform: scalex(0.6);
-            transform: scalex(0.6);
+    -webkit-transform: scaley(0.6);
+            transform: scaley(0.6);
   }
   46% {
-    -webkit-transform: scalex(0.8);
-            transform: scalex(0.8);
-    opacity: 0.5;
+    -webkit-transform: scaley(0.8);
+            transform: scaley(0.8);
   }
   100% {
-    opacity: 1;
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
+    -webkit-transform: scaley(1);
+            transform: scaley(1);
   }
 }
 
 @keyframes heart {
   0% {
-    opacity: 0;
-    -webkit-transform: scaleX(0);
-            transform: scaleX(0);
+    -webkit-transform: scaley(0);
+            transform: scaley(0);
   }
   17% {
-    -webkit-transform-origin: bottom;
-            transform-origin: bottom;
-    -webkit-transform: scalex(0.4);
-            transform: scalex(0.4);
-    opacity: 0.5;
+    -webkit-transform: scaley(0.4);
+            transform: scaley(0.4);
   }
   24% {
-    opacity: 1;
-    -webkit-transform: scalex(0.6);
-            transform: scalex(0.6);
+    -webkit-transform: scaley(0.6);
+            transform: scaley(0.6);
   }
   46% {
-    -webkit-transform: scalex(0.8);
-            transform: scalex(0.8);
-    opacity: 0.5;
+    -webkit-transform: scaley(0.8);
+            transform: scaley(0.8);
+  }
+  100% {
+    -webkit-transform: scaley(1);
+            transform: scaley(1);
+  }
+}
+
+@-webkit-keyframes myAnim {
+  0% {
+    opacity: 0;
+    -webkit-transform: rotateX(100deg);
+            transform: rotateX(100deg);
+    -webkit-transform-origin: bottom;
+            transform-origin: bottom;
   }
   100% {
     opacity: 1;
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
+    -webkit-transform: rotateX(0);
+            transform: rotateX(0);
+    -webkit-transform-origin: bottom;
+            transform-origin: bottom;
+  }
+}
+
+@keyframes myAnim {
+  0% {
+    opacity: 0;
+    -webkit-transform: rotateX(100deg);
+            transform: rotateX(100deg);
+    -webkit-transform-origin: bottom;
+            transform-origin: bottom;
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: rotateX(0);
+            transform: rotateX(0);
+    -webkit-transform-origin: bottom;
+            transform-origin: bottom;
   }
 }
 
@@ -362,20 +382,35 @@ main .localisation input {
 }
 
 .card_restaurant .description_icone {
-  font-size: 24px;
   margin-top: 30px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.card_restaurant .description_icone--full {
+  opacity: 0;
+  position: relative;
+  left: -30px;
+}
+
+.card_restaurant .description_icone--full:hover {
+  opacity: 1;
+  font-weight: bolder;
+  background-image: -webkit-gradient(linear, left bottom, right top, from(#9356dc), to(#ff79da));
+  background-image: linear-gradient(to right top, #9356dc, #ff79da);
+  -webkit-background-clip: text;
+  color: transparent;
+  -webkit-transform: scaleX(1) bottom;
+          transform: scaleX(1) bottom;
+  -webkit-animation: heart 2s infinite ease-in-out;
 }
 
 .card_restaurant .description_icone--empty {
-  color: transparent;
+  opacity: 1;
 }
 
-.card_restaurant .description_icone:hover {
-  background: -webkit-gradient(linear, left top, left bottom, from(#9356dc), to(#ff79da));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -webkit-animation: heart 2000ms ease-in-out;
-          animation: heart 2000ms ease-in-out;
+.card_restaurant .description_icone--empty:hover {
+  opacity: 0;
 }
 
 .card_restaurant .nouveau {
