--- a/dart-sass/sass/styles.scss
+++ b/dart-sass/sass/styles.scss
@@ -221,22 +221,32 @@ main {
       font-size: 17px;
     }
     &_icone {
-      font-size: 24px;
       margin-top: 30px;
-      &--empty {
-        color: transparent;
+      font-size: 24px;
+      cursor: pointer;
+      &--full {
+        opacity: 0;
+        position: relative;
+        left: -30px;
+        &:hover {
+          opacity: 1;
+          font-weight: bolder;
+          background-image: linear-gradient(
+            to right top,
+            $color-primary,
+            $color-secondary
+          );
+          -webkit-background-clip: text;
+          color: transparent;
+          transform: scaleX(1) bottom;
+          -webkit-animation: heart 2s infinite ease-in-out;
+        }
       }
-      &:hover {
-        background: -webkit-gradient(
-          linear,
-          left top,
-          left bottom,
-          from($color-primary),
-          to($color-secondary)
-        );
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        animation: heart 2000ms ease-in-out;
+      &--empty {
+        opacity: 1;
+        &:hover {
+          opacity: 0;
+        }
       }
     }
   }
