--- a/dart-sass/sass/styles.css
+++ b/dart-sass/sass/styles.css
@@ -12,47 +12,47 @@
 
 @-webkit-keyframes heart {
   0% {
-    -webkit-transform: scaley(0);
-            transform: scaley(0);
+    -webkit-transform: scale(0);
+            transform: scale(0);
   }
-  17% {
-    -webkit-transform: scaley(0.4);
-            transform: scaley(0.4);
+  25% {
+    -webkit-transform: scale(0.25);
+            transform: scale(0.25);
   }
-  24% {
-    -webkit-transform: scaley(0.6);
-            transform: scaley(0.6);
+  50% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
   }
-  46% {
-    -webkit-transform: scaley(0.8);
-            transform: scaley(0.8);
+  75% {
+    -webkit-transform: scale(0.75);
+            transform: scale(0.75);
   }
   100% {
-    -webkit-transform: scaley(1);
-            transform: scaley(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
 @keyframes heart {
   0% {
-    -webkit-transform: scaley(0);
-            transform: scaley(0);
+    -webkit-transform: scale(0);
+            transform: scale(0);
   }
-  17% {
-    -webkit-transform: scaley(0.4);
-            transform: scaley(0.4);
+  25% {
+    -webkit-transform: scale(0.25);
+            transform: scale(0.25);
   }
-  24% {
-    -webkit-transform: scaley(0.6);
-            transform: scaley(0.6);
+  50% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
   }
-  46% {
-    -webkit-transform: scaley(0.8);
-            transform: scaley(0.8);
+  75% {
+    -webkit-transform: scale(0.75);
+            transform: scale(0.75);
   }
   100% {
-    -webkit-transform: scaley(1);
-            transform: scaley(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
@@ -382,35 +382,31 @@ main .localisation input {
 }
 
 .card_restaurant .description_icone {
-  margin-top: 30px;
-  font-size: 24px;
-  cursor: pointer;
+  font-size: 25px;
+  position: relative;
+  top: 40px;
 }
 
 .card_restaurant .description_icone--full {
-  opacity: 0;
   position: relative;
-  left: -30px;
+  left: -31.2px;
+  opacity: 0;
 }
 
 .card_restaurant .description_icone--full:hover {
   opacity: 1;
-  font-weight: bolder;
-  background-image: -webkit-gradient(linear, left bottom, right top, from(#9356dc), to(#ff79da));
-  background-image: linear-gradient(to right top, #9356dc, #ff79da);
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#9356dc), to(#ff79da));
+  background-image: linear-gradient(to top, #9356dc, #ff79da);
   -webkit-background-clip: text;
-  color: transparent;
-  -webkit-transform: scaleX(1) bottom;
-          transform: scaleX(1) bottom;
-  -webkit-animation: heart 2s infinite ease-in-out;
+  -webkit-text-fill-color: transparent;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-animation: heart 1000ms ease-in-out;
+          animation: heart 1000ms ease-in-out;
 }
 
 .card_restaurant .description_icone--empty {
   opacity: 1;
-}
-
-.card_restaurant .description_icone--empty:hover {
-  opacity: 0;
 }
 
 .card_restaurant .nouveau {
@@ -424,5 +420,94 @@ main .localisation input {
   background-color: #99e2d0;
   color: #32b091;
   font-weight: bold;
+}
+
+.resto {
+  margin-top: -80px;
+  border-radius: 50px 50px 0 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 20px;
+  position: relative;
+  top: -80px;
+  background-color: #f5f5f5;
+}
+
+.resto_titre {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 5vw;
+  font-family: "shrikhand";
+}
+
+.resto_titre_icone {
+  position: relative;
+  left: 30px;
+  cursor: pointer;
+}
+
+.resto_titre_icone--full {
+  position: relative;
+  bottom: 9px;
+  opacity: 0;
+  z-index: 1;
+}
+
+.resto_titre_icone--full:hover {
+  opacity: 1;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#9356dc), to(#ff79da));
+  background-image: linear-gradient(to top, #9356dc, #ff79da);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-animation: heart 1000ms ease-in-out;
+          animation: heart 1000ms ease-in-out;
+}
+
+.resto_titre_icone--empty {
+  position: absolute;
+  z-index: 2;
+}
+
+.resto_menu_titre {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.resto_menu_titre h4 {
+  font-size: 23px;
+  font-weight: 500;
+  text-transform: uppercase;
+  border-bottom: #99e2d0 4px solid;
+  width: 40px;
+}
+
+.resto_menu_titre .resto_menu_choix {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 /*# sourceMappingURL=styles.css.map */
