--- a/dart-sass/sass/styles.scss
+++ b/dart-sass/sass/styles.scss
@@ -221,32 +221,19 @@ main {
       font-size: 17px;
     }
     &_icone {
-      margin-top: 30px;
-      font-size: 24px;
-      cursor: pointer;
+      font-size: 25px;
+      position: relative;
+      top: 40px;
       &--full {
-        opacity: 0;
         position: relative;
-        left: -30px;
+        left: -31.2px;
+        opacity: 0;
         &:hover {
-          opacity: 1;
-          font-weight: bolder;
-          background-image: linear-gradient(
-            to right top,
-            $color-primary,
-            $color-secondary
-          );
-          -webkit-background-clip: text;
-          color: transparent;
-          transform: scaleX(1) bottom;
-          -webkit-animation: heart 2s infinite ease-in-out;
+          @include animation;
         }
       }
       &--empty {
         opacity: 1;
-        &:hover {
-          opacity: 0;
-        }
       }
     }
   }
@@ -261,5 +248,56 @@ main {
     background-color: $color-tertiary;
     color: darken($color: $color-tertiary, $amount: 30);
     font-weight: bold;
+  }
+}
+.resto {
+  margin-top: -80px;
+  border-radius: 50px 50px 0 0;
+  box-sizing: border-box;
+  padding: 20px;
+  position: relative;
+  top: -80px;
+  background-color: $color-bg;
+  &_titre {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 5vw;
+    font-family: "shrikhand";
+    &_icone {
+      position: relative;
+      left: 30px;
+      cursor: pointer;
+      &--full {
+        position: relative;
+        bottom: 9px;
+        opacity: 0;
+        z-index: 1;
+        &:hover {
+          @include animation;
+        }
+      }
+      &--empty {
+        position: absolute;
+        z-index: 2;
+      }
+    }
+  }
+}
+.resto_menu_titre {
+  display: flex;
+  flex-direction: column;
+  h4 {
+    font-size: 23px;
+    font-weight: 500;
+    text-transform: uppercase;
+    border-bottom: $color-tertiary 4px solid;
+    width: 40px;
+  }
+  .resto_menu_choix {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
