--- a/dart-sass/sass/utils/_keyframes.scss
+++ b/dart-sass/sass/utils/_keyframes.scss
@@ -1,18 +1,18 @@
 @keyframes heart {
   0% {
-    transform: scaley(0);
+    transform: scale(0);
   }
-  17% {
-    transform: scaley(0.4);
+  25% {
+    transform: scale(0.25);
   }
-  24% {
-    transform: scaley(0.6);
+  50% {
+    transform: scale(0.5);
   }
-  46% {
-    transform: scaley(0.8);
+  75% {
+    transform: scale(0.75);
   }
   100% {
-    transform: scaley(1);
+    transform: scale(1);
   }
 }
 
