--- a/dart-sass/sass/styles.css
+++ b/dart-sass/sass/styles.css
@@ -56,37 +56,89 @@
   }
 }
 
-@-webkit-keyframes myAnim {
+@-webkit-keyframes rotation {
   0% {
-    opacity: 0;
-    -webkit-transform: rotateX(100deg);
-            transform: rotateX(100deg);
-    -webkit-transform-origin: bottom;
-            transform-origin: bottom;
+    -webkit-transform: all;
+            transform: all;
+  }
+  1% {
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
   }
   100% {
-    opacity: 1;
-    -webkit-transform: rotateX(0);
-            transform: rotateX(0);
-    -webkit-transform-origin: bottom;
-            transform-origin: bottom;
+    -webkit-transform: rotateZ(360deg);
+            transform: rotateZ(360deg);
   }
 }
 
-@keyframes myAnim {
+@keyframes rotation {
   0% {
-    opacity: 0;
-    -webkit-transform: rotateX(100deg);
-            transform: rotateX(100deg);
-    -webkit-transform-origin: bottom;
-            transform-origin: bottom;
+    -webkit-transform: all;
+            transform: all;
+  }
+  1% {
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
+  }
+  100% {
+    -webkit-transform: rotateZ(360deg);
+            transform: rotateZ(360deg);
+  }
+}
+
+@-webkit-keyframes slide {
+  0% {
+    opacity: 1;
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+  }
+  25% {
+    opacity: 1;
+    -webkit-transform: scaleX(0.25);
+            transform: scaleX(0.25);
+  }
+  50% {
+    opacity: 1;
+    -webkit-transform: scaleX(0.5);
+            transform: scaleX(0.5);
+  }
+  75% {
+    opacity: 1;
+    -webkit-transform: scaleX(0.75);
+            transform: scaleX(0.75);
   }
   100% {
     opacity: 1;
-    -webkit-transform: rotateX(0);
-            transform: rotateX(0);
-    -webkit-transform-origin: bottom;
-            transform-origin: bottom;
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+}
+
+@keyframes slide {
+  0% {
+    opacity: 1;
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+  }
+  25% {
+    opacity: 1;
+    -webkit-transform: scaleX(0.25);
+            transform: scaleX(0.25);
+  }
+  50% {
+    opacity: 1;
+    -webkit-transform: scaleX(0.5);
+            transform: scaleX(0.5);
+  }
+  75% {
+    opacity: 1;
+    -webkit-transform: scaleX(0.75);
+            transform: scaleX(0.75);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
   }
 }
 
