--- a/dart-sass/sass/utils/_keyframes.scss
+++ b/dart-sass/sass/utils/_keyframes.scss
@@ -16,16 +16,37 @@
   }
 }
 
-@keyframes myAnim {
+@keyframes rotation {
   0% {
-    opacity: 0;
-    transform: rotateX(100deg);
-    transform-origin: bottom;
+    transform: all;
+  }
+  1% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+@keyframes slide {
+  0% {
+    opacity: 1;
+    transform: scaleX(0);
+  }
+  25% {
+    opacity: 1;
+    transform: scaleX(0.25);
+  }
+  50% {
+    opacity: 1;
+    transform: scaleX(0.5);
+  }
+  75% {
+    opacity: 1;
+    transform: scaleX(0.75);
   }
 
   100% {
     opacity: 1;
-    transform: rotateX(0);
-    transform-origin: bottom;
+    transform: scaleX(1);
   }
 }
