--- a/dart-sass/sass/styles.css
+++ b/dart-sass/sass/styles.css
@@ -199,7 +199,7 @@ header {
   display: block;
 }
 
-header .logo {
+header #logo {
   text-align: center;
   padding: 10px;
 }
@@ -380,8 +380,8 @@ main .localisation input {
 
 #restaurants {
   background-color: #f5f5f5;
-  margin: 20px 0 20px 0;
-  padding: 10px 0 10px 0;
+  margin: 20px 0 0px 0;
+  padding: 10px 0 100px 0;
 }
 
 #restaurants h2 {
@@ -663,5 +663,37 @@ main .localisation input {
 .resto_menu .resto_menu_choix--nom h4 {
   font-size: 17px;
   margin-bottom: -5px;
+}
+
+footer {
+  padding: 10px 20px;
+  background-color: #434343;
+}
+
+footer h3 {
+  color: white;
+  font-size: 20px;
+  font-family: "shrikhand", sans-serif;
+  font-weight: 100;
+}
+
+footer .box_footer ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+footer .box_footer ul li {
+  margin-bottom: 10px;
+}
+
+footer .box_footer ul li a {
+  font-size: 17px;
+  color: white;
+  font-weight: 300;
+}
+
+footer .box_footer ul li a i {
+  margin-right: 10px;
 }
 /*# sourceMappingURL=styles.css.map */
