--- a/dart-sass/sass/styles.css
+++ b/dart-sass/sass/styles.css
@@ -142,6 +142,42 @@
   }
 }
 
+@-webkit-keyframes up {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(20%);
+            transform: translateY(20%);
+  }
+  50% {
+    opacity: 0;
+    -webkit-transform: translateY(10%);
+            transform: translateY(10%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@keyframes up {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(20%);
+            transform: translateY(20%);
+  }
+  50% {
+    opacity: 0;
+    -webkit-transform: translateY(10%);
+            transform: translateY(10%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
 @media screen and (min-width: 992px) {
   body {
     width: 80%;
@@ -164,41 +200,27 @@
             justify-content: space-between;
     background-color: #fff;
   }
-<<<<<<< HEAD
-  .restaurants .box_restaurant .card_restaurant {
-=======
   #restaurants {
     border-radius: 20px;
   }
   #restaurants .box_restaurant .card_restaurant {
->>>>>>> footer
     width: 40%;
     height: 20vw;
     margin: 10px;
   }
-<<<<<<< HEAD
-  .restaurants .box_restaurant .card_restaurant img {
-    height: 190px;
-  }
-  .restaurants .box_restaurant .card_restaurant .nouveau {
-=======
   #restaurants .box_restaurant .card_restaurant img {
     height: 190px;
   }
   #restaurants .box_restaurant .card_restaurant .nouveau {
->>>>>>> footer
     top: -280px;
     left: 280px;
   }
 }
 
-<<<<<<< HEAD
-=======
 html {
   scroll-behavior: smooth;
 }
 
->>>>>>> footer
 body {
   font-family: "roboto", sans-serif;
   margin: auto;
@@ -527,8 +549,17 @@ main .localisation input {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transform-origin: bottom;
+          transform-origin: bottom;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+  -webkit-animation: up 1s;
+          animation: up 1s;
+}
+
+.resto_titre_nom {
+  font-size: 30px;
   font-family: "shrikhand";
-  font-size: 24px;
 }
 
 .resto_titre_icone {
@@ -575,6 +606,12 @@ main .localisation input {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-transform-origin: bottom;
+          transform-origin: bottom;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+  -webkit-animation: up 2s;
+          animation: up 2s;
 }
 
 .resto_menu h3 {
@@ -711,349 +748,235 @@ footer .box_footer ul li a i {
   margin-right: 10px;
 }
 
-main {
+/*main {
   display: block;
+  .localisation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #e6e6e6;
+    box-shadow: inset 0px 7px 3px -5px #3a383833;
+    i {
+      display: inline-block;
+      font-size: 17px;
+      margin-right: 5px;
+    }
+    input {
+      text-align: center;
+      border: transparent;
+      background-color: #e6e6e6;
+      font-weight: bolder;
+      font-size: 17px;
+    }
+  }
 }
-
-main .localisation {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background-color: #e6e6e6;
-  -webkit-box-shadow: inset 0px 7px 3px -5px #3a383833;
-          box-shadow: inset 0px 7px 3px -5px #3a383833;
-}
-
-main .localisation i {
-  display: inline-block;
-  font-size: 17px;
-  margin-right: 5px;
-}
-
-main .localisation input {
-  text-align: center;
-  border: transparent;
-  background-color: #e6e6e6;
-  font-weight: bolder;
-  font-size: 17px;
-}
-
 .recherche_restaurant {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   padding: 20px 0 30px 0;
-  background-color: #f5f5f5;
-}
-
-.recherche_restaurant h1 {
-  font-size: 30px;
-  font-weight: bold;
-  text-align: center;
-  margin: 5px;
-}
-
-.recherche_restaurant p {
-  font-size: 20px;
-  font-weight: lighter;
-  text-align: center;
-  margin: 30px 10px 50px 10px;
-}
-
-.recherche_restaurant .btn {
-  font-size: 20px;
-  font-weight: 500;
-  padding: 15px;
-  border: 1px solid transparent;
-  border-radius: 50px;
-  -webkit-box-shadow: 0 0 10px #3a383833;
-          box-shadow: 0 0 10px #3a383833;
-  color: white;
-  background: -webkit-gradient(linear, right bottom, left top, from(#9356dc), to(#ff79da));
-  background: linear-gradient(to left top, #9356dc, #ff79da);
+  background-color: $color-bg;
+  h1 {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    margin: 5px;
+  }
+  p {
+    font-size: 20px;
+    font-weight: lighter;
+    text-align: center;
+    margin: 30px 10px 50px 10px;
+  }
+  .btn {
+    font-size: 20px;
+    font-weight: 500;
+    padding: 15px;
+    border: 1px solid transparent;
+    border-radius: 50px;
+    box-shadow: 0 0 10px #3a383833;
+    color: white;
+    background: linear-gradient(to left top, $color-primary, $color-secondary);
+  }
 }
 
 .fonctionnement {
   margin: 60px 0 60px 0;
-}
-
-.fonctionnement h2 {
-  text-align: left;
-  margin-left: 30px;
-  padding-bottom: 20px;
+  h2 {
+    text-align: left;
+    margin-left: 30px;
+    padding-bottom: 20px;
+  }
 }
 
 .btn-fonctionnement {
   margin: 10px 0px 10px 0px;
-}
-
-.btn-fonctionnement .fonctionnement_button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 20px 5px 30px 5px;
-}
-
-.btn-fonctionnement .fonctionnement_button_number {
-  position: relative;
-  left: 12px;
-  z-index: 2;
-  padding: 5px 10px;
-  border-radius: 100px;
-  border: 1px solid #9356dc;
-  background-color: #9356dc;
-  color: white;
-  font-size: 15px;
-}
-
-.btn-fonctionnement .fonctionnement_button a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
+  .fonctionnement_button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 5px 30px 5px;
+    &_number {
+      position: relative;
+      left: 12px;
+      z-index: 2;
+      padding: 5px 10px;
+      border-radius: 100px;
+      border: 1px solid $color-primary;
+      background-color: $color-primary;
+      color: white;
+      font-size: 15px;
+    }
+    a {
+      display: flex;
+      align-items: center;
       justify-content: space-around;
-  width: 85%;
-  border: 1px solid transparent;
-  -webkit-box-shadow: 0 5px 10px #3a383833;
-          box-shadow: 0 5px 10px #3a383833;
-  border-radius: 20px;
-  padding: 5px;
-  background-color: #f5f5f5;
-  position: relative;
-  z-index: 1;
+      width: 85%;
+      border: 1px solid transparent;
+      @include shadow;
+      border-radius: 20px;
+      padding: 5px;
+      background-color: $color-bg;
+      position: relative;
+      z-index: 1;
+      .fonctionnement_button_icon {
+        font-size: 24px;
+        margin-left: 20px;
+      }
+      h3 {
+        font-size: 20px;
+      }
+    }
+  }
 }
-
-.btn-fonctionnement .fonctionnement_button a .fonctionnement_button_icon {
-  font-size: 24px;
-  margin-left: 20px;
-}
-
-.btn-fonctionnement .fonctionnement_button a h3 {
-  font-size: 20px;
-}
-
-.image_restaurant img {
-  width: 100%;
-  height: 350px;
-  -o-object-fit: fill;
-     object-fit: fill;
+.image_restaurant {
+  img {
+    width: 100%;
+    height: 350px;
+    object-fit: fill;
+  }
 }
 
 .restaurants {
-  background-color: #f5f5f5;
+  background-color: $color-bg;
   margin: 20px 0 20px 0;
   padding: 10px 0 10px 0;
-}
-
-.restaurants h2 {
-  margin-left: 30px;
-}
-
-.restaurants .box_restaurant {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  h2 {
+    margin-left: 30px;
+  }
+  .box_restaurant {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+  }
 }
 
 .card_restaurant {
   border-radius: 20px;
   border: 1px solid transparent;
-  -webkit-box-shadow: 0 5px 10px #3a383833;
-          box-shadow: 0 5px 10px #3a383833;
+  @include shadow;
   width: 85%;
   height: 60vw;
   margin: 20px;
+  &:hover {
+    @include shadow-darker;
+  }
+  img {
+    width: 100%;
+    height: 40vw;
+    border-radius: 20px 20px 0 0;
+    object-fit: cover;
+  }
+  .description {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: -15px 5px 5px 5px;
+    &_titre {
+      font-size: 17px;
+    }
+    &_icone {
+      font-size: 25px;
+      position: relative;
+      top: 40px;
+      &--full {
+        position: relative;
+        left: -31.2px;
+        opacity: 0;
+        &:hover {
+          @include animation;
+        }
+      }
+      &--empty {
+        opacity: 1;
+      }
+    }
+  }
+  .nouveau {
+    position: relative;
+    left: 220px;
+    top: -250px;
+    padding: 5px;
+    border-radius: 5px;
+    width: 70px;
+    height: 20px;
+    background-color: $color-tertiary;
+    color: darken($color: $color-tertiary, $amount: 30);
+    font-weight: bold;
+  }
 }
-
-.card_restaurant:hover {
-  -webkit-box-shadow: 0 10px 15px #9356dc;
-          box-shadow: 0 10px 15px #9356dc;
-}
-
-.card_restaurant img {
-  width: 100%;
-  height: 40vw;
-  border-radius: 20px 20px 0 0;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.card_restaurant .description {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin: -15px 5px 5px 5px;
-}
-
-.card_restaurant .description_titre {
-  font-size: 17px;
-}
-
-.card_restaurant .description_icone {
-  font-size: 25px;
-  position: relative;
-  top: 40px;
-}
-
-.card_restaurant .description_icone--full {
-  position: relative;
-  left: -31.2px;
-  opacity: 0;
-}
-
-.card_restaurant .description_icone--full:hover {
-  opacity: 1;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#9356dc), to(#ff79da));
-  background-image: linear-gradient(to top, #9356dc, #ff79da);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-animation: heart 1000ms ease-in-out;
-          animation: heart 1000ms ease-in-out;
-}
-
-.card_restaurant .description_icone--empty {
-  opacity: 1;
-}
-
-.card_restaurant .nouveau {
-  position: relative;
-  left: 220px;
-  top: -250px;
-  padding: 5px;
-  border-radius: 5px;
-  width: 70px;
-  height: 20px;
-  background-color: #99e2d0;
-  color: #32b091;
-  font-weight: bold;
-}
-
 .resto {
   margin-top: -80px;
   border-radius: 50px 50px 0 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 20px;
   position: relative;
   top: -80px;
-  background-color: #f5f5f5;
+  background-color: $color-bg;
+  &_titre {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 5vw;
+    font-family: "shrikhand";
+    &_icone {
+      position: relative;
+      left: 30px;
+      cursor: pointer;
+      &--full {
+        position: relative;
+        bottom: 9px;
+        opacity: 0;
+        z-index: 1;
+        &:hover {
+          @include animation;
+        }
+      }
+      &--empty {
+        position: absolute;
+        z-index: 2;
+      }
+    }
+  }
 }
-
-.resto_titre {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-size: 5vw;
-  font-family: "shrikhand";
-}
-
-.resto_titre_icone {
-  position: relative;
-  left: 30px;
-  cursor: pointer;
-}
-
-.resto_titre_icone--full {
-  position: relative;
-  bottom: 9px;
-  opacity: 0;
-  z-index: 1;
-}
-
-.resto_titre_icone--full:hover {
-  opacity: 1;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#9356dc), to(#ff79da));
-  background-image: linear-gradient(to top, #9356dc, #ff79da);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-animation: heart 1000ms ease-in-out;
-          animation: heart 1000ms ease-in-out;
-}
-
-.resto_titre_icone--empty {
-  position: absolute;
-  z-index: 2;
-}
-
 .resto_menu_titre {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.resto_menu_titre h4 {
-  font-size: 23px;
-  font-weight: 500;
-  text-transform: uppercase;
-  border-bottom: #99e2d0 4px solid;
-  width: 40px;
-}
-
-.resto_menu_titre .resto_menu_choix {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
+  flex-direction: column;
+  h4 {
+    font-size: 23px;
+    font-weight: 500;
+    text-transform: uppercase;
+    border-bottom: $color-tertiary 4px solid;
+    width: 40px;
+  }
+  .resto_menu_choix {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}*/
 /*# sourceMappingURL=styles.css.map */
