--- a/dart-sass/sass/utils/_keyframes.scss
+++ b/dart-sass/sass/utils/_keyframes.scss
@@ -50,3 +50,18 @@
     transform: scaleX(1);
   }
 }
+
+@keyframes up {
+  0% {
+    opacity: 0;
+    transform: translateY(20%);
+  }
+  50% {
+    opacity: 0;
+    transform: translateY(10%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
