--- a/dart-sass/sass/styles.scss
+++ b/dart-sass/sass/styles.scss
@@ -7,6 +7,10 @@
   body {
     width: 80%;
   }
+  .loader {
+    width: 85%;
+    left: -30px;
+  }
   .fonctionnement {
     width: 40%;
   }
@@ -48,6 +52,45 @@ body {
   a {
     text-decoration: none;
     color: black;
+  }
+}
+
+.loader {
+  position: fixed;
+  z-index: 10;
+  font-family: "shrikhand", sans-serif;
+  font-size: 40px;
+  background: white;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: loader 3.5s forwards;
+  .oh {
+    color: $color-primary;
+    opacity: 0;
+    animation: ohmyfood 0.7s ease-in-out both;
+    animation-delay: 0.5s;
+  }
+  .my {
+    color: $color-secondary;
+    animation: ohmyfood 0.7s ease-in-out both;
+    animation-delay: 1s;
+  }
+  .food {
+    color: $color-tertiary;
+    animation: ohmyfood 0.7s ease-in-out both;
+    animation-delay: 1.7s;
+  }
+  .point {
+    background-image: linear-gradient(to top, $color-primary, $color-secondary);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    opacity: 0;
+    animation: expand 1.4s ease-in-out both;
+    animation-delay: 2s;
   }
 }
 
@@ -278,7 +321,7 @@ main {
     align-items: center;
     transform-origin: bottom;
     transform: translateY(0px);
-    animation: up 1s;
+    animation: up 1s ease-out;
     &_nom {
       font-size: 30px;
       font-family: "shrikhand";
@@ -314,7 +357,7 @@ main {
   flex-direction: column;
   transform-origin: bottom;
   transform: translateY(0px);
-  animation: up 2s;
+  animation: up 2s ease-in-out;
   h3 {
     text-transform: uppercase;
     border-bottom: $color-tertiary 4px solid;
@@ -330,6 +373,7 @@ main {
     background-color: white;
     cursor: pointer;
     padding-left: 15px;
+
     @include shadow;
     &:hover {
       @include shadow-darker;
@@ -339,7 +383,7 @@ main {
         opacity: 1;
         transform: scaleX(1);
         transform-origin: right;
-        animation: slide 200ms;
+        animation: slide 200ms ease-in-out both;
       }
       & .resto_menu_choix--prix {
         p {
