--- a/dart-sass/sass/utils/_keyframes.scss
+++ b/dart-sass/sass/utils/_keyframes.scss
@@ -65,3 +65,48 @@
     transform: translateY(0px);
   }
 }
+
+@keyframes loader {
+  0% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+
+@keyframes ohmyfood {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes expand {
+  0% {
+    transform: scale(1);
+    opacity: 0;
+  }
+  25% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  30% {
+    transform: scale(10);
+    opacity: 0.7;
+  }
+  50% {
+    transform: scale(50);
+    opacity: 0.5;
+  }
+  75% {
+    transform: scale(250);
+    opacity: 0.3;
+  }
+  100% {
+    transform: scale(400);
+    opacity: 0.2;
+  }
+}
