--- a/dart-sass/sass/styles.scss
+++ b/dart-sass/sass/styles.scss
@@ -1,8 +1,10 @@
+/*Import Fichiers CSS*/
 @import "./utils/fonts";
 @import "./utils/variables";
 @import "./utils/mixins";
 @import "./utils/keyframes";
 
+/*Media Queris Desktop*/
 @media screen and(min-width: 992px) {
   body {
     width: 80%;
@@ -23,6 +25,12 @@
     justify-content: space-between;
     background-color: #fff;
   }
+  #logo {
+    img {
+      width: 40%;
+      height: 5vw;
+    }
+  }
   #restaurants {
     border-radius: 20px;
     .box_restaurant {
@@ -35,9 +43,19 @@
         }
         .nouveau {
           top: -280px;
-          left: 280px;
+          left: 300px;
         }
       }
+    }
+  }
+}
+
+/*Media Queries Tablette*/
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .box_restaurant {
+    .card_restaurant {
+      width: 40%;
+      margin: 20px;
     }
   }
 }
@@ -55,6 +73,7 @@ body {
   }
 }
 
+/*Animations Loader*/
 .loader {
   position: fixed;
   z-index: 10;
@@ -94,6 +113,7 @@ body {
   }
 }
 
+/*Header*/
 header {
   display: block;
   animation: ohmyfood 1s ease-in-out 3s both;
@@ -103,9 +123,10 @@ header {
   }
   img {
     width: 50%;
-    height: 7vw;
+    height: 8vw;
   }
 }
+/*Flèche Retour Page Restaurant*/
 .header-menu {
   position: relative;
   margin: 10px;
@@ -114,7 +135,7 @@ header {
     top: 20%;
     .fa-arrow-left {
       display: inline-block;
-      font-size: 40px;
+      font-size: 4vw;
       font-weight: bold;
     }
   }
@@ -123,28 +144,32 @@ header {
 main {
   display: block;
   animation: ohmyfood 1s ease-in-out 3s both;
-  .localisation {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+}
+
+/*Localisation*/
+.localisation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #e6e6e6;
+  box-shadow: inset 0px 7px 3px -5px #3a383833;
+  i {
+    display: inline-block;
+    font-size: 17px;
+    margin-right: 5px;
+  }
+  input {
+    text-align: center;
+    border: transparent;
     background-color: #e6e6e6;
-    box-shadow: inset 0px 7px 3px -5px #3a383833;
-    i {
-      display: inline-block;
-      font-size: 17px;
-      margin-right: 5px;
-    }
-    input {
-      text-align: center;
-      border: transparent;
-      background-color: #e6e6e6;
-      font-weight: bolder;
-      font-size: 17px;
-    }
+    font-weight: bolder;
+    font-size: 17px;
   }
 }
+
+/*Section Recherche*/
 .recherche_restaurant {
   display: flex;
   flex-direction: column;
@@ -176,6 +201,7 @@ main {
   cursor: pointer;
 }
 
+/*Section Fonctionnement*/
 .fonctionnement {
   margin: 60px 0 60px 0;
   h2 {
@@ -225,6 +251,8 @@ main {
     }
   }
 }
+
+/*Image Restaurant*/
 .image_restaurant {
   img {
     width: 100%;
@@ -233,6 +261,7 @@ main {
   }
 }
 
+/*Box Restaurants Page Accueil*/
 #restaurants {
   background-color: $color-bg;
   margin: 20px 0 0px 0;
@@ -253,14 +282,14 @@ main {
   border: 1px solid transparent;
   @include shadow;
   width: 85%;
-  height: 60vw;
+  height: 250px;
   margin: 20px;
   &:hover {
     @include shadow-darker;
   }
   img {
     width: 100%;
-    height: 40vw;
+    height: 150px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
   }
@@ -295,19 +324,23 @@ main {
       }
     }
   }
-  .nouveau {
-    position: relative;
-    left: 220px;
-    top: -250px;
-    padding: 5px;
-    border-radius: 5px;
-    width: 70px;
-    height: 20px;
-    background-color: $color-tertiary;
-    color: darken($color: $color-tertiary, $amount: 30);
-    font-weight: bold;
-  }
 }
+.nouveau {
+  position: relative;
+  left: 230px;
+  bottom: 230px;
+  z-index: 9;
+  padding: 5px;
+  border-radius: 5px;
+  width: 70px;
+  height: 20px;
+  background-color: $color-tertiary;
+  color: darken($color: $color-tertiary, $amount: 30);
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/*Menu Restaurant*/
 .resto {
   margin-top: -80px;
   border-radius: 50px 50px 0 0;
@@ -323,7 +356,7 @@ main {
     align-items: center;
     transform-origin: bottom;
     transform: translateY(0px);
-    animation: up 2s ease-out 2s;
+    animation: up 2s ease-out 2.5s;
     &_nom {
       font-size: 30px;
       font-family: "shrikhand";
@@ -359,13 +392,12 @@ main {
   flex-direction: column;
   transform-origin: bottom;
   transform: translateY(0px);
-  animation: up 2s ease-in-out 2s;
+  animation: up 2s ease-in-out 2.5s;
   h3 {
     text-transform: uppercase;
     border-bottom: $color-tertiary 4px solid;
     width: 40px;
   }
-
   .resto_menu_choix {
     display: flex;
     justify-content: space-between;
@@ -381,7 +413,6 @@ main {
     &:hover {
       & .resto_menu_choix--prix {
         transform: translateX(0);
-        /*animation: slide 200ms ease-in-out both;*/
       }
       & .fa-circle-check {
         animation: rotation 400ms ease-in-out 0s normal both;
@@ -390,8 +421,6 @@ main {
         overflow: hidden;
         margin-right: 0;
         h4 {
-          /*font-size: 17px;
-          margin-bottom: -5px;*/
           white-space: nowrap;
           text-overflow: ellipsis;
           overflow: hidden;
@@ -405,10 +434,6 @@ main {
     }
     &--prix {
       display: flex;
-      /*justify-content: center;
-      align-items: center;
-      justify-self: flex-end;
-      align-self: stretch;*/
       transform: translateX(100px);
       transition: all 0.4s ease-in-out;
       p {
@@ -452,6 +477,7 @@ main {
   }
 }
 
+/*Bouton Commander*/
 .commander {
   display: flex;
   align-items: center;
@@ -462,6 +488,8 @@ main {
     padding: 15px 50px 15px 50px;
   }
 }
+
+/*Footer*/
 footer {
   padding: 10px 20px;
   background-color: darken($color-bg, $amount: 70);
