--- a/dart-sass/sass/styles.scss
+++ b/dart-sass/sass/styles.scss
@@ -4,7 +4,7 @@
 @import "./utils/mixins";
 @import "./utils/keyframes";
 
-/*Media Queris Desktop*/
+/*Media Queries Desktop*/
 @media screen and(min-width: 992px) {
   body {
     width: 80%;
